# MIcroVAP_Model

./: .env  .gitignore  README.md  pyproject.toml
configs/: params.yaml
data/: microvap.db
data/raw/: .~lock.MicroVAP_data_dictionary_complete_15012026.xlsx#  .~lock.microvap_metadata_complete_15012026.xlsx#
notebooks/: EDA_Inicial.ipynb  Load_Data.ipynb
src/MicroNAV/: main.py  pipeline.py
src/MicroNAV/adapters/outbound/db/: sqlite_db.py
src/MicroNAV/application/use_cases/: load_microvap_dataset.py
src/MicroNAV/sql/: Creacion Tablas.sql
src/MicroNAV/utils/: logger.py
